--- a/AB_Testing_code.ipynb
+++ b/AB_Testing_code.ipynb
@@ -2687,7 +2687,7 @@
    "metadata": {},
    "source": [
     "#### Gross Conversion comparison: 4 failures, 19 successes\n",
-    "![GC_Binomial_Result.png](attachment:GC_Binomial_Result.png)\n",
+    "https://raw.githubusercontent.com/jojoms711/Udacity_AB_Testing/master/GC_Binomial_Result.png\n",
     "\n",
     "So, P-Value of the test is 0.0026. Since the probability to pass the test daily is 1-0.0026 = 0.9974 which is greater than 95%, this result does not happen by chance (statistically significant) and <font color=green>**it passes the sign test**</font>."
    ]
@@ -2698,10 +2698,17 @@
    "metadata": {},
    "source": [
     "#### Net Conversion comparison: 10 failures , 13 successes\n",
-    "![NC_Binomial_Result.png](attachment:NC_Binomial_Result.png)\n",
+    "https://raw.githubusercontent.com/jojoms711/Udacity_AB_Testing/master/NC_Binomial_Result.png\n",
     "\n",
     "So, P-Value of the test is 0.6776. Since the probability to pass the test daily is 1-0.6776 = 0.3224 which is lower than 95% , <font color=red>**it does NOT pass the sign test.**</font> The experiment will not have statistical significance impact on Net Conversion."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
