--- a/AB_Testing_code.ipynb
+++ b/AB_Testing_code.ipynb
@@ -2368,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2397,11 +2397,11 @@
        "      <th>Clicks_x</th>\n",
        "      <th>Enrollments_x</th>\n",
        "      <th>Payments_x</th>\n",
-       "      <th>GC_exp</th>\n",
        "      <th>Pageviews_y</th>\n",
        "      <th>Clicks_y</th>\n",
        "      <th>Enrollments_y</th>\n",
        "      <th>Payments_y</th>\n",
+       "      <th>GC_exp</th>\n",
        "      <th>NC_exp</th>\n",
        "      <th>GC_ctr</th>\n",
        "      <th>NC_ctr</th>\n",
@@ -2415,11 +2415,11 @@
        "      <td>686</td>\n",
        "      <td>105.0</td>\n",
        "      <td>34.0</td>\n",
-       "      <td>0.153061</td>\n",
        "      <td>7723</td>\n",
        "      <td>687</td>\n",
        "      <td>134.0</td>\n",
        "      <td>70.0</td>\n",
+       "      <td>0.153061</td>\n",
        "      <td>0.049563</td>\n",
        "      <td>0.195051</td>\n",
        "      <td>0.101892</td>\n",
@@ -2431,11 +2431,11 @@
        "      <td>785</td>\n",
        "      <td>116.0</td>\n",
        "      <td>91.0</td>\n",
-       "      <td>0.147771</td>\n",
        "      <td>9102</td>\n",
        "      <td>779</td>\n",
        "      <td>147.0</td>\n",
        "      <td>70.0</td>\n",
+       "      <td>0.147771</td>\n",
        "      <td>0.115924</td>\n",
        "      <td>0.188703</td>\n",
        "      <td>0.089859</td>\n",
@@ -2447,11 +2447,11 @@
        "      <td>884</td>\n",
        "      <td>145.0</td>\n",
        "      <td>79.0</td>\n",
-       "      <td>0.164027</td>\n",
        "      <td>10511</td>\n",
        "      <td>909</td>\n",
        "      <td>167.0</td>\n",
        "      <td>95.0</td>\n",
+       "      <td>0.164027</td>\n",
        "      <td>0.089367</td>\n",
        "      <td>0.183718</td>\n",
        "      <td>0.104510</td>\n",
@@ -2463,11 +2463,11 @@
        "      <td>827</td>\n",
        "      <td>138.0</td>\n",
        "      <td>92.0</td>\n",
-       "      <td>0.166868</td>\n",
        "      <td>9871</td>\n",
        "      <td>836</td>\n",
        "      <td>156.0</td>\n",
        "      <td>105.0</td>\n",
+       "      <td>0.166868</td>\n",
        "      <td>0.111245</td>\n",
        "      <td>0.186603</td>\n",
        "      <td>0.125598</td>\n",
@@ -2479,11 +2479,11 @@
        "      <td>832</td>\n",
        "      <td>140.0</td>\n",
        "      <td>94.0</td>\n",
-       "      <td>0.168269</td>\n",
        "      <td>10014</td>\n",
        "      <td>837</td>\n",
        "      <td>163.0</td>\n",
        "      <td>64.0</td>\n",
+       "      <td>0.168269</td>\n",
        "      <td>0.112981</td>\n",
        "      <td>0.194743</td>\n",
        "      <td>0.076464</td>\n",
@@ -2493,29 +2493,22 @@
        "</div>"
       ],
       "text/plain": [
-       "          Date  Pageviews_x  Clicks_x  Enrollments_x  Payments_x    GC_exp  \\\n",
-       "0  Sat, Oct 11         7716       686          105.0        34.0  0.153061   \n",
-       "1  Sun, Oct 12         9288       785          116.0        91.0  0.147771   \n",
-       "2  Mon, Oct 13        10480       884          145.0        79.0  0.164027   \n",
-       "3  Tue, Oct 14         9867       827          138.0        92.0  0.166868   \n",
-       "4  Wed, Oct 15         9793       832          140.0        94.0  0.168269   \n",
+       "          Date  Pageviews_x  Clicks_x  Enrollments_x  Payments_x  Pageviews_y  \\\n",
+       "0  Sat, Oct 11         7716       686          105.0        34.0         7723   \n",
+       "1  Sun, Oct 12         9288       785          116.0        91.0         9102   \n",
+       "2  Mon, Oct 13        10480       884          145.0        79.0        10511   \n",
+       "3  Tue, Oct 14         9867       827          138.0        92.0         9871   \n",
+       "4  Wed, Oct 15         9793       832          140.0        94.0        10014   \n",
        "\n",
-       "   Pageviews_y  Clicks_y  Enrollments_y  Payments_y    NC_exp    GC_ctr  \\\n",
-       "0         7723       687          134.0        70.0  0.049563  0.195051   \n",
-       "1         9102       779          147.0        70.0  0.115924  0.188703   \n",
-       "2        10511       909          167.0        95.0  0.089367  0.183718   \n",
-       "3         9871       836          156.0       105.0  0.111245  0.186603   \n",
-       "4        10014       837          163.0        64.0  0.112981  0.194743   \n",
-       "\n",
-       "     NC_ctr  \n",
-       "0  0.101892  \n",
-       "1  0.089859  \n",
-       "2  0.104510  \n",
-       "3  0.125598  \n",
-       "4  0.076464  "
+       "   Clicks_y  Enrollments_y  Payments_y    GC_exp    NC_exp    GC_ctr    NC_ctr  \n",
+       "0       687          134.0        70.0  0.153061  0.049563  0.195051  0.101892  \n",
+       "1       779          147.0        70.0  0.147771  0.115924  0.188703  0.089859  \n",
+       "2       909          167.0        95.0  0.164027  0.089367  0.183718  0.104510  \n",
+       "3       836          156.0       105.0  0.166868  0.111245  0.186603  0.125598  \n",
+       "4       837          163.0        64.0  0.168269  0.112981  0.194743  0.076464  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2537,7 +2530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2622,7 +2615,7 @@
        "4  Wed, Oct 15  0.168269  0.194743  0.112981  0.076464"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2635,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2646,7 +2639,7 @@
        "Name: GC_sign_result, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2659,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2670,7 +2663,7 @@
        "Name: NC_sign_result, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
