--- a/AB_Testing_code.ipynb
+++ b/AB_Testing_code.ipynb
@@ -339,7 +339,7 @@
    "metadata": {},
    "source": [
     "#### Measuring Standard Deviation\n",
-    "$$ SD= \\sqrt \\frac{\\ \\hat{p}*(1−\\hat{p})}{\\ n}  $$\n",
+    "$$SD= \\sqrt \\frac{\\ \\hat{p}(1−\\hat{p})}{\\ n}$$\n",
     "\n",
     "In order to estimate variance analytically, we can assume metrics which are probabilities ( $\\hat{p}$ ) are binomially distributed, so we can use this formula for the standard deviation: \n",
     "\n",
@@ -1870,7 +1870,7 @@
    "metadata": {},
    "source": [
     "Just in case you need to refer back to the formula to calculate pooled probability and std deviation pool:\n",
-    "$$ SD_{pool}= \\sqrt {\\hat {p_{pool}}(1−\\hat {p_{pool}})(\\frac{\\ 1}{Ncont}+\\frac{\\ 1}{Nexp})}$$\n",
+    "$$ SD_{pool}= \\sqrt {\\hat {p_{pool}}(1−\\hat{p_{pool}})(\\frac{\\ 1}{Ncont}+\\frac{\\ 1}{Nexp})}$$\n",
     "\n",
     "$$ \\hat {p_{pool}} = \\frac{\\ X_{cont} + X_{exp}}{N_{cont}+ N_{exp}} $$"
    ]
